--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -2,104 +2,149 @@
 # Footer
 --------------------------------------------------------------*/
 /* Background*/
-
-.site-footer{
-  @include desktop{
-    width:100%;
-  }
-  @include flex (center,center);
-  font-family: $font_header_footer;
-  overflow: hidden;
-  font-size: 0.8rem;
-  min-width: 380px;
-    height:150px;
-    background-color:$color_footer_green;
-    color:$white;
-}
-/*block Items*/
-.footer-block-item1{
-@include desktop{width:1400px;}
-  position: relative;
-  width: 100%;
-  padding: 10px 0 30px 0;
-height: 30px;
-  margin-top:-30px;
-  ul{
-  padding-left: 0px;
-    li{@include desktop{
-      padding: 0 60px;
-      font-size: 1.3rem;
-      text-align: left;
-    };
-      line-height: normal;
-    font-size: 1.3rem;
-    padding: 0 10px;
-    display: inline-block;
-      a{
-        color:#D3E0DE;
-       text-decoration: none;
-      }
+.site-footer {
+    @include desktop {
+        width: 100%;
     }
-  }
+    font-family: $font_header_footer;
+    height: 150px;
+    background-color: $color_footer_green;
+    color: $white;
 }
- .boarder1{
-  border-left: solid 1px $white;
-  border-right: solid 1px $white;
+/*The Footer Main Container*/
+.footer-blocks {
+    @include desktop {
+        width:90%;
+    }
 }
-.boarder2{
-  border-right: solid 1px $white;
-}
-.footer-block-item2{
-  padding-top: 0px;
-  padding-left: 20px;
-  padding-bottom: 0px;
 
-  width: 100%;
-text-align: center;
-p{@include desktop{};
-margin: 0px auto;
+.footer-block-item1 {
+  position: relative;
+      width: 100%;
+      padding: 10px 0 30px;
+      height: 30px;
+      margin-top: -30px;
+      li:last-child a {
 
-i{
-  display: inline-block;
-    margin: 0;
-    padding: 3.9px;
-    margin-right: 5px;
-    width: 46px;
-    color: #fff;
-    border: 1px solid #fff;
-    border-radius: 50%;
-}
-}
-  a{
-    font-size: 1.1rem;
-    margin-right: 10px;
-      color:#D3E0DE;
-     text-decoration: none;
-}
-}
-/* copy rights*/
+          display: none;
+          @include desktop{
+          display: inline-block;
+          }
+        }
+      .fa { display: none;
+        @include desktop{
+                  display: inline-block;
+                  margin: 0;
+                  padding: 3.9px;
+                  margin-right: 5px;
+                  width: 31.6px;
+                  color: #fff;
+                  border: 1px solid #fff;
+                  border-radius: 50%;
+                  font-size: 1.2rem;
+              }}
+              ul{
+li:nth-child(even){
+                border-left: solid 1px $white;
+              }
+              li:nth-child(3){
+                border-left: solid 1px $white;
 
-.footer-block-item3{
-  padding-top: 5px;
-    width:100%;
-    height: 20px;
-  text-align: center;
-  text-transform:capitalize;
-  p{
-    margin: 0px;
-  height: 20px;
-    font-size: 1rem;
-  }
-}
-/*the links in the footer */
 
-.footer-block-item1 li{
-  a:hover{
-    cursor: pointer;
-  color: $color_btn_hover_green;
-  }
+              }
+
+
+@include desktop{
+  li:nth-child(4){
+    border-right: solid 1px $white;
+
 }
-.footer-block-item2 a:hover{
-  cursor: pointer;
-    color: $color_btn_hover_green;
 }
+         }
+              li {
+                      font-size: 1.3rem;
+                      text-align: left;
+
+                  line-height: normal;
+                  font-size: 1.3rem;
+                  padding: 0 10px;
+                  display: inline-block;
+
+                  a {
+
+                      color: #D3E0DE;
+                      text-decoration: none;
+                  }
+
+                }}
+//block 2
+.footer-block-item2 {
+    padding-top: 0;
+    padding-left: 20px;
+    padding-bottom: 0;
+    width: 100%;
+    text-align: center;
+
+    p {
+        margin: 0 auto;
+    }
+
+        .fa {
+            display: inline-block;
+            margin: 0;
+            padding: 3.9px;
+            margin-right: 5px;
+            width: 31.6px;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            font-size: 1.2rem;
+        }
+
+        a {
+            font-size: 1.1rem;
+            margin-right: 10px;
+            color: #D3E0DE;
+            text-decoration: none;
+        }
+    }
+
+
+//
+//     @include desktop {
+//         width: 60%;
+//
+//
+//
+//
+//
+//
+
+//
+//
+// /* copy rights*/
+// .footer-block-item3 {
+//     padding-top: 5px;
+//     width: 100%;
+//     height: 20px;
+//     text-align: center;
+//     text-transform: capitalize;
+//
+//     p {
+//         margin: 0;
+//         height: 20px;
+//         font-size: 1rem;
+//     }
+// }
+// /*the links in the footer */
+// .footer-block-item1 li {
+//     a:hover {
+//         cursor: pointer;
+//         color: $color_btn_hover_green;
+//     }
+// }
+//
+// .footer-block-item2 a:hover {
+//     cursor: pointer;
+//     color: $color_btn_hover_green;
+// }
