--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -13,71 +13,85 @@
 }
 /*The Footer Main Container*/
 .footer-blocks {
+    @include flex(center,space-between);
+    flex-wrap: wrap;
+    width: 440px;
     @include desktop {
-        width:90%;
+        width: 100%;
     }
 }
 
 .footer-block-item1 {
-  position: relative;
-      width: 100%;
-      padding: 10px 0 30px;
-      height: 30px;
-      margin-top: -30px;
-      li:last-child a {
+    position: relative;
+    @include desktop {
+        width: 75%;
+    }
+    padding: 10px 0;
+    height: 48px;
+    margin-top: 5px;
 
-          display: none;
-          @include desktop{
-          display: inline-block;
-          }
+    li:last-child a {
+        display: none;
+        @include desktop {
+            display: inline-block;
         }
-      .fa { display: none;
-        @include desktop{
-                  display: inline-block;
-                  margin: 0;
-                  padding: 3.9px;
-                  margin-right: 5px;
-                  width: 31.6px;
-                  color: #fff;
-                  border: 1px solid #fff;
-                  border-radius: 50%;
-                  font-size: 1.2rem;
-              }}
-              ul{
-li:nth-child(even){
-                border-left: solid 1px $white;
-              }
-              li:nth-child(3){
-                border-left: solid 1px $white;
+    }
 
+    .fa {
+        display: none;
+        @include desktop {
+            display: inline-block;
+            margin: 0;
+            padding: 3.9px;
+            width: 31.6px;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            font-size: 1.2rem;
+        }
+    }
 
-              }
+    ul {
+        overflow: hidden;
 
+        li:nth-child(even) {
+            border-left: solid 1px $white;
+        }
 
-@include desktop{
-  li:nth-child(4){
-    border-right: solid 1px $white;
+        li:nth-child(3) {
+            border-left: solid 1px $white;
+        }
+        @include desktop {
+            li:nth-child(4) {
+                border-right: solid 1px $white;
+            }
+        }
+    }
 
+    li {
+        display: inline-block;
+        font-size: 1.3rem;
+        text-align: left;
+        line-height: normal;
+        font-size: 1.3rem;
+        padding: 0 5px;
+        @include desktop {
+            padding: 0 2%;
+        }
+        display: inline-block;
+
+        a {
+            font-size: 1.2rem;
+            @include desktop {
+                font-size: 1.3rem;
+            };
+            color: #D3E0DE;
+            text-decoration: none;
+        }
+    }
 }
-}
-         }
-              li {
-                      font-size: 1.3rem;
-                      text-align: left;
-
-                  line-height: normal;
-                  font-size: 1.3rem;
-                  padding: 0 10px;
-                  display: inline-block;
-
-                  a {
-
-                      color: #D3E0DE;
-                      text-decoration: none;
-                  }
-
-                }}
 //block 2
+
 .footer-block-item2 {
     padding-top: 0;
     padding-left: 20px;
@@ -89,27 +103,25 @@ li:nth-child(even){
         margin: 0 auto;
     }
 
-        .fa {
-            display: inline-block;
-            margin: 0;
-            padding: 3.9px;
-            margin-right: 5px;
-            width: 31.6px;
-            color: #fff;
-            border: 1px solid #fff;
-            border-radius: 50%;
-            font-size: 1.2rem;
-        }
-
-        a {
-            font-size: 1.1rem;
-            margin-right: 10px;
-            color: #D3E0DE;
-            text-decoration: none;
-        }
+    .fa {
+        display: inline-block;
+        margin: 0;
+        padding: 3.9px;
+        margin-right: 5px;
+        width: 31.6px;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        font-size: 1.2rem;
     }
 
-
+    a {
+        font-size: 1.1rem;
+        margin-right: 10px;
+        color: #D3E0DE;
+        text-decoration: none;
+    }
+}
 //
 //     @include desktop {
 //         width: 60%;
@@ -119,7 +131,6 @@ li:nth-child(even){
 //
 //
 //
-
 //
 //
 // /* copy rights*/
