--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -770,16 +770,28 @@ div .secondary {
       width: 100%; } }
 
 /*The Footer Main Container*/
-@media (min-width: 60rem) {
-  .footer-blocks {
-    width: 90%; } }
+.footer-blocks {
+  display: flex;
+  display: -ms-flexbox;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 440px; }
+  @media (min-width: 60rem) {
+    .footer-blocks {
+      width: 100%; } }
 
 .footer-block-item1 {
   position: relative;
-  width: 100%;
-  padding: 10px 0 30px;
-  height: 30px;
-  margin-top: -30px; }
+  padding: 10px 0;
+  height: 48px;
+  margin-top: 5px; }
+  @media (min-width: 60rem) {
+    .footer-block-item1 {
+      width: 75%; } }
   .footer-block-item1 li:last-child a {
     display: none; }
     @media (min-width: 60rem) {
@@ -792,29 +804,38 @@ div .secondary {
         display: inline-block;
         margin: 0;
         padding: 3.9px;
-        margin-right: 5px;
         width: 31.6px;
         color: #fff;
         border: 1px solid #fff;
         border-radius: 50%;
         font-size: 1.2rem; } }
-  .footer-block-item1 ul li:nth-child(even) {
-    border-left: solid 1px #fff; }
-  .footer-block-item1 ul li:nth-child(3) {
-    border-left: solid 1px #fff; }
-  @media (min-width: 60rem) {
-    .footer-block-item1 ul li:nth-child(4) {
-      border-right: solid 1px #fff; } }
+  .footer-block-item1 ul {
+    overflow: hidden; }
+    .footer-block-item1 ul li:nth-child(even) {
+      border-left: solid 1px #fff; }
+    .footer-block-item1 ul li:nth-child(3) {
+      border-left: solid 1px #fff; }
+    @media (min-width: 60rem) {
+      .footer-block-item1 ul li:nth-child(4) {
+        border-right: solid 1px #fff; } }
   .footer-block-item1 li {
+    display: inline-block;
     font-size: 1.3rem;
     text-align: left;
     line-height: normal;
     font-size: 1.3rem;
-    padding: 0 10px;
+    padding: 0 5px;
     display: inline-block; }
+    @media (min-width: 60rem) {
+      .footer-block-item1 li {
+        padding: 0 2%; } }
     .footer-block-item1 li a {
+      font-size: 1.2rem;
       color: #D3E0DE;
       text-decoration: none; }
+      @media (min-width: 60rem) {
+        .footer-block-item1 li a {
+          font-size: 1.3rem; } }
 
 .footer-block-item2 {
   padding-top: 0;
