--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -2181,6 +2181,42 @@ body {
       align-items: center;
   background-color: grey; }
 
+h1,
+h2,
+h3 {
+  font-family: "Asap", sans-serif;
+  font-weight: normal; }
+
+h1 {
+  font-size: 2.25rem;
+  line-height: 2.625rem; }
+
+h2 {
+  font-size: 1.875rem;
+  line-height: 2.125rem; }
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 1.6875rem; }
+
+p {
+  font-size: 1.625rem;
+  line-height: 2.5rem;
+  font-style: "Noto Sans", sans-serif; }
+
+.spcil p {
+  font-size: 1.25rem;
+  line-height: 2.5rem;
+  font-style: "Noto Sans", sans-serif; }
+
+.green-btn {
+  background-color: #4FC8A1;
+  color: #fff;
+  font-family: "Noto Sans";
+  font-size: 1.25rem;
+  font-weight: normal;
+  text-decoration: none; }
+
 .nw-program {
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem; }
@@ -2206,14 +2242,14 @@ body {
     margin-top: 25rem; }
   .funding .funding-det {
     display: block; }
-  .funding .money-spend-img,
-  .funding .funding-img {
+  .funding .funding-img,
+  .funding .money-spend-img {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center; }
-    .funding .money-spend-img img,
-    .funding .funding-img img {
+    .funding .funding-img img,
+    .funding .money-spend-img img {
       width: 87%;
       margin-right: 0.125rem;
       margin-bottom: 0.625rem; }
@@ -2255,7 +2291,7 @@ body {
   -ms-flex-direction: column;
       flex-direction: column; }
   .enroll .enroll-info {
-    margin-top: 10rem; }
+    margin-top: 27rem; }
   .enroll .enroll-block {
     max-width: 70%;
     display: -ms-flexbox;
