style the footer for desktop size approach

--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -409,6 +409,7 @@
 }
 /*Start Resources Section  */
 .main-resources {
+  border-bottom: none;
   height: 400px;
   position: relative;
 .green-btn {
