--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,3 +1,4 @@
+///
 
 .red-border-container{
 width: 90%;
@@ -16,19 +17,20 @@ p{
 /// this framework is for the block quotes to make the red bar left
 
 ////**mobile container we will change it when we finish the mobile first **///
-.mob-container{
-  overflow-x: hidden;
-  // min-width:$desktop-width;
-  margin: 0px auto;
-}
+
 .content-wrapper{
  border-bottom: solid 3px $color_btn_green;
 	max-width: 85%;
 	margin: 0 auto;
 	overflow: auto;
-  padding: 40px 0;
-  overflow: hidden;
   height: 100%;
   padding: 30px 0;
 
+}
+.head-footer-container{
+	max-width: 85%;
+  margin: 0 auto;
+	overflow: auto;
+  padding: 0;
+  overflow: auto;
 }
