--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -3,6 +3,7 @@
 --------------------------------------------------------------*/
 /* Background*/
 .site-footer {
+  margin: 0px auto;
     @include desktop {
         width: 100%;
     }
@@ -22,17 +23,20 @@
 }
 
 .footer-block-item1 {
-    position: relative;
+  position: relative;
+  padding: 0;
+  height: 40px;
+  margin-top: 5px;
     @include desktop {
-        width: 75%;
+        width: 70%;
     }
-    padding: 10px 0;
-    height: 48px;
-    margin-top: 5px;
+
+
 
     li:last-child a {
         display: none;
         @include desktop {
+          padding-right: 0px;
             display: inline-block;
         }
     }
@@ -40,50 +44,50 @@
     .fa {
         display: none;
         @include desktop {
-            display: inline-block;
-            margin: 0;
-            padding: 3.9px;
-            width: 31.6px;
-            color: #fff;
-            border: 1px solid #fff;
-            border-radius: 50%;
-            font-size: 1.2rem;
+          display: inline-block;
+margin: 13px;
+padding: 3.2px 8.6px;
+width: 30.6px;
+color: #fff;
+border: 1px solid #fff;
+border-radius: 50%;
+font-size: 1.1rem;
         }
     }
 
-    ul {
+    ul {display: inline-flex;
+      flex-wrap: nowrap;
+      padding-left: 0px;
         overflow: hidden;
 
-        li:nth-child(even) {
+        li:nth-child(even) a{
             border-left: solid 1px $white;
         }
 
-        li:nth-child(3) {
+        li:nth-child(3) a{
             border-left: solid 1px $white;
         }
         @include desktop {
-            li:nth-child(4) {
+        li:first-child a{
+          padding-left: 0px;}
+            li:nth-child(4) a{
                 border-right: solid 1px $white;
             }
         }
     }
 
-    li {
+    ul li {
         display: inline-block;
         font-size: 1.3rem;
-        text-align: left;
-        line-height: normal;
-        font-size: 1.3rem;
-        padding: 0 5px;
-        @include desktop {
-            padding: 0 2%;
-        }
+        padding: 0 ;
         display: inline-block;
 
         a {
+          padding: 0 10px;
             font-size: 1.2rem;
             @include desktop {
                 font-size: 1.3rem;
+                padding:0 30px;
             };
             color: #D3E0DE;
             text-decoration: none;
@@ -93,11 +97,13 @@
 //block 2
 
 .footer-block-item2 {
-    padding-top: 0;
-    padding-left: 20px;
-    padding-bottom: 0;
-    width: 100%;
-    text-align: center;
+  @include desktop {
+
+    display:none;};
+    padding-left: 0;
+width: 100%;
+text-align: center;
+margin-top: 0px;
 
     p {
         margin: 0 auto;
@@ -122,40 +128,50 @@
         text-decoration: none;
     }
 }
-//
-//     @include desktop {
-//         width: 60%;
-//
-//
-//
-//
-//
-//
-//
-//
-// /* copy rights*/
-// .footer-block-item3 {
-//     padding-top: 5px;
-//     width: 100%;
-//     height: 20px;
-//     text-align: center;
-//     text-transform: capitalize;
-//
-//     p {
-//         margin: 0;
-//         height: 20px;
-//         font-size: 1rem;
-//     }
-// }
-// /*the links in the footer */
-// .footer-block-item1 li {
-//     a:hover {
-//         cursor: pointer;
-//         color: $color_btn_hover_green;
-//     }
-// }
-//
-// .footer-block-item2 a:hover {
-//     cursor: pointer;
-//     color: $color_btn_hover_green;
-// }
+
+/* copy rights*/
+.footer-block-item3 {
+
+
+    padding-top: 5px;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    text-transform: capitalize;
+    @include desktop{
+      width: 50%;
+      text-align: left;
+      padding:0 0 40px 0px;
+
+    }
+    p {
+        margin: 0;
+        height: 40px;
+        font-size: 1rem;
+        @include desktop{font-size: 1.3rem;}
+    }
+}
+/*the links in the footer */
+.footer-block-item1 li {
+    a:hover {
+        cursor: pointer;
+        color: $color_btn_hover_green;
+    }
+}
+
+.footer-block-item2 a:hover {
+    cursor: pointer;
+    color: $color_btn_hover_green;
+}
+
+.desktop-add-block{
+  display: none;
+  @include desktop{
+    display: inline-block;
+    width: 30%;
+  ul li{
+    line-height: 1.9rem;
+    font-size: 1.2rem;
+  }}
+
+}
