--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -231,7 +231,7 @@ th {
   padding: 0; }
 
 /*--------------------------------------------------------------
-# Embedded Fonts
+# Embedded Google Fonts 
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Typography
@@ -486,14 +486,6 @@ textarea {
 # Content
 --------------------------------------------------------------*/
 /* Posts and pages */
-#target {
-  background: #fff;
-  width: 300px;
-  height: 300px;
-  height: 160px;
-  padding: 5px;
-  display: none; }
-
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -761,6 +753,7 @@ div .secondary {
 --------------------------------------------------------------*/
 /* Background*/
 .site-footer {
+  margin: 0px auto;
   font-family: "PT Sans", sans-serif;
   height: 150px;
   background-color: #125A50;
@@ -786,63 +779,69 @@ div .secondary {
 
 .footer-block-item1 {
   position: relative;
-  padding: 10px 0;
-  height: 48px;
+  padding: 0;
+  height: 40px;
   margin-top: 5px; }
   @media (min-width: 60rem) {
     .footer-block-item1 {
-      width: 75%; } }
+      width: 70%; } }
   .footer-block-item1 li:last-child a {
     display: none; }
     @media (min-width: 60rem) {
       .footer-block-item1 li:last-child a {
+        padding-right: 0px;
         display: inline-block; } }
   .footer-block-item1 .fa {
     display: none; }
     @media (min-width: 60rem) {
       .footer-block-item1 .fa {
         display: inline-block;
-        margin: 0;
-        padding: 3.9px;
-        width: 31.6px;
+        margin: 13px;
+        padding: 3.2px 8.6px;
+        width: 30.6px;
         color: #fff;
         border: 1px solid #fff;
         border-radius: 50%;
-        font-size: 1.2rem; } }
+        font-size: 1.1rem; } }
   .footer-block-item1 ul {
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding-left: 0px;
     overflow: hidden; }
-    .footer-block-item1 ul li:nth-child(even) {
+    .footer-block-item1 ul li:nth-child(even) a {
       border-left: solid 1px #fff; }
-    .footer-block-item1 ul li:nth-child(3) {
+    .footer-block-item1 ul li:nth-child(3) a {
       border-left: solid 1px #fff; }
     @media (min-width: 60rem) {
-      .footer-block-item1 ul li:nth-child(4) {
+      .footer-block-item1 ul li:first-child a {
+        padding-left: 0px; }
+      .footer-block-item1 ul li:nth-child(4) a {
         border-right: solid 1px #fff; } }
-  .footer-block-item1 li {
+  .footer-block-item1 ul li {
     display: inline-block;
     font-size: 1.3rem;
-    text-align: left;
-    line-height: normal;
-    font-size: 1.3rem;
-    padding: 0 5px;
+    padding: 0;
     display: inline-block; }
-    @media (min-width: 60rem) {
-      .footer-block-item1 li {
-        padding: 0 2%; } }
-    .footer-block-item1 li a {
+    .footer-block-item1 ul li a {
+      padding: 0 10px;
       font-size: 1.2rem;
       color: #D3E0DE;
       text-decoration: none; }
       @media (min-width: 60rem) {
-        .footer-block-item1 li a {
-          font-size: 1.3rem; } }
+        .footer-block-item1 ul li a {
+          font-size: 1.3rem;
+          padding: 0 30px; } }
 
 .footer-block-item2 {
-  padding-top: 0;
-  padding-left: 20px;
-  padding-bottom: 0;
+  padding-left: 0;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-top: 0px; }
+  @media (min-width: 60rem) {
+    .footer-block-item2 {
+      display: none; } }
   .footer-block-item2 p {
     margin: 0 auto; }
   .footer-block-item2 .fa {
@@ -860,6 +859,45 @@ div .secondary {
     margin-right: 10px;
     color: #D3E0DE;
     text-decoration: none; }
+
+/* copy rights*/
+.footer-block-item3 {
+  padding-top: 5px;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  text-transform: capitalize; }
+  @media (min-width: 60rem) {
+    .footer-block-item3 {
+      width: 50%;
+      text-align: left;
+      padding: 0 0 40px 0px; } }
+  .footer-block-item3 p {
+    margin: 0;
+    height: 40px;
+    font-size: 1rem; }
+    @media (min-width: 60rem) {
+      .footer-block-item3 p {
+        font-size: 1.3rem; } }
+
+/*the links in the footer */
+.footer-block-item1 li a:hover {
+  cursor: pointer;
+  color: #248E6A; }
+
+.footer-block-item2 a:hover {
+  cursor: pointer;
+  color: #248E6A; }
+
+.desktop-add-block {
+  display: none; }
+  @media (min-width: 60rem) {
+    .desktop-add-block {
+      display: inline-block;
+      width: 30%; }
+      .desktop-add-block ul li {
+        line-height: 1.9rem;
+        font-size: 1.2rem; } }
 
 .page .contact_info {
   width: 100%;
@@ -1306,6 +1344,7 @@ div .secondary {
 
 /*Start Resources Section  */
 .main-resources {
+  border-bottom: none;
   height: 400px;
   position: relative; }
   .main-resources .green-btn {
@@ -1689,19 +1728,20 @@ div .secondary {
   .red-border-container p {
     margin: 0 auto; }
 
-.mob-container {
-  overflow-x: hidden;
-  margin: 0px auto; }
-
 .content-wrapper {
   border-bottom: solid 3px #4FC8A1;
   max-width: 85%;
   margin: 0 auto;
   overflow: auto;
-  padding: 40px 0;
-  overflow: hidden;
   height: 100%;
   padding: 30px 0; }
+
+.head-footer-container {
+  max-width: 85%;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0;
+  overflow: auto; }
 
 /*--------------------------- # 404 page --------------------------*/
 @keyframes pulsate {
