--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1051,13 +1051,13 @@ div .secondary {
       color: #fff;
       margin-left: 20px;
       padding: 8px;
-      box-shadow: none;
       font-family: "Noto Sans";
       font-size: 20px;
       font-weight: 300;
-      text-shadow: none;
       letter-spacing: 0.8px;
-      text-decoration: none; }
+      height: 47px;
+      display: -ms-flexbox;
+      display: flex; }
     .site-main .support-wrapper .information .green-btn {
       background-color: #4FC8A1;
       border-color: #4FC8A1;
@@ -1070,11 +1070,12 @@ div .secondary {
       color: #fff;
       margin-left: 20px;
       padding: 8px;
-      box-shadow: none;
       font-weight: 300;
-      text-shadow: none;
       letter-spacing: 0.8px;
-      text-decoration: none; }
+      height: 47px;
+      width: 185px;
+      display: -ms-flexbox;
+      display: flex; }
 
 .site-main .all-features {
   margin-bottom: 30px; }
