--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -178,6 +178,7 @@ p {
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
+	justify-content: center;
 
 	.teacher-grid {
 		display: flex;
@@ -185,7 +186,7 @@ p {
 		justify-content: space-around;
 
 		.teacher-block {
-			flex: 0.03;
+			flex: 33%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -194,6 +195,7 @@ p {
 			}
 			@include desktop {
 				flex: 1;
+				justify-content: space-around;
 			}
 		}
 
@@ -240,10 +242,10 @@ p {
 			.back {
 				border-radius: 50%;
 				position: absolute;
-				width: 125px;
+				width: 100px;
 				overflow: hidden;
 				text-overflow: ellipsis;
-				height: 125px;
+				height: 100px;
 				text-align: center;
 				right: 3px;
 				-webkit-transform: rotateY(180deg);
@@ -262,8 +264,8 @@ p {
 		.back,
 		.flip-container,
 		.front {
-			width: 125px;
-			height: 125px;
+			width: 100px;
+			height: 100px;
 		}
 
 		.back,
