--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,14 +1,13 @@
 //-------------------front page---------------------------//
-
 // media screen for mobile (max-width: 480px)
 .site-main {
     .home {
         width: 100%;
         height: auto;
-         margin: 0 auto;
-         @include desktop{
-            padding: 0px 90px;
-         }
+        margin: 0 auto;
+        @include desktop {
+            padding: 0 90px;
+        }
         .home-wrapper {
             width: 480px;
             height: 585px;
@@ -79,7 +78,7 @@
                     max-width: 320px;
                     margin: 90px 100px;
                     text-align: center;
-                } 
+                }
             }
             // }//welcome-wrapper
         }
@@ -216,54 +215,51 @@
                     width: 1283px;
                 }
             }
-            .support-img-wrapper{
-                // height: auto;
-                @include desktop{
-                height: 0;
-                }
-
-            img {
-                margin: 0px 6rem;
-                // width: 287px;
-                // height: 470px;
-                @include desktop {
-                    height: auto;
-                    display: flex;
-                    top: -13rem;
-                    position: absolute;
-                    right: 35px;
-                }
-            }
-
-            p {
-                text-align: center;
+            .support-img-wrapper {
                 // height: auto;
                 @include desktop {
-                   display: flex;
-                    top: 18rem;
-                    position: relative;
-                    right: -950px;
-                    width: 25%;
+                    height: 0;
+                }
+                img {
+                    margin: 0 6rem;
+                    // width: 287px;
+                    // height: 470px;
+                    @include desktop {
+                        height: auto;
+                        display: flex;
+                        top: -13rem;
+                        position: absolute;
+                        right: 35px;
+                    }
+                }
+                p {
+                    text-align: center;
+                    // height: auto;
+                    @include desktop {
+                        display: flex;
+                        top: 18rem;
+                        position: relative;
+                        right: -950px;
+                        width: 25%;
+                    }
                 }
             }
-        } //support-wrapper
-
-        blockquote {
-            border-left: 6px solid #D93B57;
-            font-size: 25px;
-            margin-bottom: 95px;
-            height: 125px;
-                @include desktop{
+            //support-wrapper
+            blockquote {
+                border-left: 6px solid #D93B57;
+                font-size: 25px;
+                margin-bottom: 95px;
+                height: 125px;
+                @include desktop {
                     border-left: 6px solid #D93B57;
                     margin: 27px 119px;
                     width: 70%;
                     height: auto;
-                p {
-                    font-size: 24px;
+                    p {
+                        font-size: 24px;
+                    }
                 }
             }
-        }
-
             p {
                 width: 377px;
                 font-family: "Noto Sans";
@@ -276,10 +272,9 @@
                     font-family: Noto Sans;
                     font-size: 22px;
                     line-height: 47px;
-                    letter-spacing: .9px;
-                    margin: 30px 40px;                
-                    }
-
+                    letter-spacing: 0.9px;
+                    margin: 30px 40px;
+                }
                 .info {
                     width: 470px;
                     // height: 294px;
@@ -307,7 +302,6 @@
                 // width: 200px;
                 height: 47px;
                 display: flex;
-
             }
             .green-btn {
                 background-color: #4FC8A1;
@@ -331,7 +325,8 @@
         //information
     }
     //support-wrapper
-    // this is for the features fliper
+
+// this is for the features fliper
     .all-features {
         margin-bottom: 30px;
         h2 {
@@ -358,13 +353,12 @@
             box-sizing: border-box;
             height: 139.76px;
             width: 480.27px;
-    position: relative;
-	border-radius: 10px;
-	font-family: 'Noto Sans';
-	font-size: 15px;
-	color: #000;
-	text-decoration: none;	
-
+            position: relative;
+            border-radius: 10px;
+            font-family: 'Noto Sans';
+            font-size: 15px;
+            color: #000;
+            text-decoration: none;
             .features-flipper {
                 position: relative;
                 -webkit-transition: 1.9s;
