styling about page desktop size large at member section

--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1389,7 +1389,8 @@ div .secondary {
   margin: 0 auto;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-  max-width: 70rem; }
+  max-width: 70rem;
+  background-color: grey; }
 
 .about-school {
   border-bottom: solid 3px #4FC8A1;
@@ -1401,8 +1402,8 @@ div .secondary {
       flex-wrap: wrap;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
+  -ms-flex-direction: column;
+      flex-direction: column; }
   @media (min-width: 70rem) {
     .members-list {
       -ms-flex-direction: column;
@@ -1487,6 +1488,12 @@ div .secondary {
     .members-list .members-grid .front {
       width: 125px;
       height: 125px; }
+      @media screen and (min-width: 650px) {
+        .members-list .members-grid .back,
+        .members-list .members-grid .flip-container,
+        .members-list .members-grid .front {
+          width: 190px;
+          height: 190px; } }
       @media (min-width: 70rem) {
         .members-list .members-grid .back,
         .members-list .members-grid .flip-container,
@@ -1517,6 +1524,10 @@ div .secondary {
         flex-wrap: wrap;
     -ms-flex-pack: center;
         justify-content: center; }
+    @media (min-width: 70rem) {
+      .members_at_large .members_at_large-grid {
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap; } }
     .members_at_large .members_at_large-grid .members_at_large-name {
       font-size: 1.375rem;
       display: -ms-flexbox;
