--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -14,6 +14,7 @@
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
 	max-width: $desktop_width;
+	background-color: grey;
 }
 
 // about NW School Sectio
@@ -26,7 +27,7 @@
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	@include desktop {
 			flex-direction: column;
 	};
@@ -114,12 +115,15 @@
 	.front {
 		width: 125px;
 		height: 125px;
+		 @media screen and (min-width: 650px){
+			width: 190px;
+			height: 190px;
+		};
 		@include desktop{
 			width: 200px;
 			height: 200px;
 		} ;
 	}
-
 	.back,
 	.front {
 		-webkit-backface-visibility: hidden;
@@ -145,6 +149,9 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		@include desktop{
+			flex-wrap: nowrap;
+		};
 		.members_at_large-name {
 			font-size: $font_member_staff;
 			display: flex;
