--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 /* Background*/
 .site-footer {
-  margin: 0px auto;
+    margin: 0 auto;
     @include desktop {
         width: 100%;
     }
@@ -17,29 +17,25 @@
     @include flex(center,space-between);
     flex-wrap: wrap;
     min-width: 95%;
-    @include desktop {
-
-    }
+    @include desktop {}
 }
-
+//footer block-1
 .footer-block-item1 {
-  width:100%;
-  text-align: center;
-  position: relative;
-  padding: 0;
-  height: 40px;
-  margin-top: 5px;
+    width: 100%;
+    text-align: center;
+    position: relative;
+    padding: 0;
+    height: 40px;
+    margin-top: 5px;
     @include desktop {
-text-align: left;
+        text-align: left;
         min-width: 70%;
     }
-
-
 
     li:last-child a {
         display: none;
         @include desktop {
-          padding-right: 0px;
+            padding-right: 0;
             display: inline-block;
         }
     }
@@ -47,34 +43,35 @@ text-align: left;
     .fa {
         display: none;
         @include desktop {
-          display: inline-block;
-margin-left: -20px;
-padding: 3.2px 8.6px;
-width: 30.6px;
-color: #fff;
-border: 1px solid #fff;
-border-radius: 50%;
-font-size: 1.1rem;
+            display: inline-block;
+            margin-left: -20px;
+            padding: 3.2px 8.6px;
+            width: 30.6px;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            font-size: 1.1rem;
         }
     }
 
-    ul {display: inline-flex;
-      padding-left: 0px;
-      padding-right: 0px;
+    ul {
+        display: inline-flex;
+        padding-left: 0;
+        padding-right: 0;
 
-
-        li:nth-child(even) a{
+        li:nth-child(even) a {
             border-left: solid 1px $white;
         }
 
-        li:nth-child(3) a{
+        li:nth-child(3) a {
             border-left: solid 1px $white;
         }
         @include desktop {
-        li:first-child a{
-          padding-left: 0px;
-        }
-            li:nth-child(4) a{
+            li:first-child a {
+                padding-left: 0;
+            }
+
+            li:nth-child(4) a {
                 border-right: solid 1px $white;
             }
         }
@@ -83,17 +80,16 @@ font-size: 1.1rem;
     ul li {
         display: inline-block;
         font-size: 1.3rem;
-        padding: 0 ;
+        padding: 0;
         display: inline-block;
 
         a {
-          padding: 0 22px;
-          margin-right: 0px;
+            padding: 0 22px;
+            margin-right: 0;
             font-size: 1.2rem;
             @include desktop {
                 font-size: 1.3rem;
-                padding:0 35px;
-
+                padding: 0 35px;
             };
             color: #D3E0DE;
             text-decoration: none;
@@ -103,14 +99,13 @@ font-size: 1.1rem;
 //block 2
 
 .footer-block-item2 {
-  @include desktop {
-
-    display:none;
-  };
+    @include desktop {
+        display: none;
+    };
     padding-left: 0;
-width: 100%;
-text-align: center;
-margin-top: 0px;
+    width: 100%;
+    text-align: center;
+    margin-top: 0;
 
     p {
         margin: 0 auto;
@@ -135,7 +130,6 @@ margin-top: 0px;
         text-decoration: none;
     }
 }
-
 /* copy rights*/
 .footer-block-item3 {
     padding-top: 5px;
@@ -143,17 +137,19 @@ margin-top: 0px;
     height: 50px;
     text-align: center;
     text-transform: capitalize;
-    @include desktop{
-      width: 50%;
-      text-align: left;
-      padding:33px 0 40px 0px;
-
+    @include desktop {
+        width: 50%;
+        text-align: left;
+        padding: 33px 0 40px;
     }
+
     p {
         margin: 0;
         height: 40px;
         font-size: 1.1rem;
-        @include desktop{font-size: 1.2rem;}
+        @include desktop {
+            font-size: 1.2rem;
+        }
     }
 }
 /*the links in the footer */
@@ -169,25 +165,30 @@ margin-top: 0px;
     color: $color_btn_hover_green;
 }
 
-.desktop-add-block{
-  display: none;
-  @include desktop{
-    margin-top:-30px;
-    display: inline-block;
-    min-width: 30%;
-  ul {padding: 0px;
-  margin: 0px;}
-  li{
-    line-height: 2.5rem;
-    font-size: 1.3rem;
-  }
-  a{
-    cursor: pointer;
-    color: $white;
-  }
-  a:hover {
-      color: $color_btn_hover_green;
-  }
-}
+.desktop-add-block {
+    display: none;
+    @include desktop {
+        margin-top: -30px;
+        display: inline-block;
+        min-width: 30%;
 
+        ul {
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            line-height: 2.5rem;
+            font-size: 1.3rem;
+        }
+
+        a {
+            cursor: pointer;
+            color: $white;
+        }
+
+        a:hover {
+            color: $color_btn_hover_green;
+        }
+    }
 }
