--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -9,9 +9,6 @@
 
 
 }
-
-
-
 .involved-title {
   width: 200px;
   height: 120px;
@@ -218,11 +215,11 @@ justify-content: center;
 
 
 // This is for red line beside the paragraf
-
-blockquote {
-    border-left: 10px solid #CB203E;
-    padding: 0 19px;
-}
+// 
+// blockquote {
+//     border-left: 10px solid #CB203E;
+//     padding: 0 19px;
+// }
 
 .involved {
   .green-btn{
