--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,28 +2,9 @@
 # Montessori
 --------------------------------------------------------------*/
 /////*Start History Section**/////
-.rotate {
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-}
-.toggle{
-  color:green;
-  padding-left:10px;
-}
 
-.fa-angle-down{
 
-  color:green;
-  padding-left:10px;
-}
 
-.history-content {
-    width: 100%;
-    flex-wrap: wrap;
-    margin-left: 30px;
-}
 
 .history-title {
     margin-bottom: 0;
@@ -55,21 +36,29 @@
             width: 100%;
             height: 100%;
         }
-    }
+    }}
+    .history-content {
+    width: 100%;
+    flex-wrap: wrap;
+    margin-left: 30px;
+.red-border-q {
+  min-width: 100%;
+}
     @include desktop {
-        .red-border-q {
-            width: 80%;
-            top: 10px;
-            margin: 0 0 0 15%;
-            padding-left: 25px;
-            display: inline-block;
-            position: relative;
+      .red-border-q {
+          width: 70%;
+          min-width:85%;
+          top: 10px;
+          margin: 0 0 0 15%;
+          padding-left: 25px;
+          display: inline-block;
+          position: relative;
 
             p {
                 font-size: 2rem;
                 margin: 0;
-            }
-        }
+            }}
+
 
         .red-border-q::before {
             content: "";
@@ -79,15 +68,14 @@
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        }
         font-size: 1.5rem;
-    };
+  }
 
     p {
         padding-top: 4px;
         text-align: left;
     }
-}
+  }}
 ////************philosophy Section ************/////
 
 .main-philosophy {
@@ -170,19 +158,18 @@
 
         h2 {
           z-index: 1;
-  margin: 0;
-  text-align: center;
-  display: inline-block;
-  width: 80%;
-  color: #248e6a;
-  height: auto;
-  overflow: hidden;
-  padding: 0;
-  bottom: 35px;
-  line-height: 1.2rem;
-  position: absolute;
-  right: 24px;
-
+      margin: 0;
+      text-align: center;
+      display: inline-block;
+      width: 85.1%;
+      color: #248e6a;
+      height: auto;
+      overflow: hidden;
+      padding: 0;
+      bottom: 14px;
+      line-height: 0.9rem;
+      right: 10px;
+      position: absolute;
             a {
                 color: #248E6A;
                 font-size: 1.1rem;
@@ -257,7 +244,7 @@
 }
 
 .materials {
-    margin-top: 60px;
+    margin-top: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -280,23 +267,24 @@
 }
 
 .materials-contents {
-    width: 100%;
+    width:90%;
     @include desktop {
-        width: 60%;
-
-        .red-border-q {
-            width: 75%;
-            top: 10px;
-            margin: 0 0 0 10%;
-            padding-left: 25px;
-            display: inline-block;
-            position: relative;
+      width:60%;
+      min-width: 50%;
+      .red-border-q {
+          width: 70%;
+          min-width:85%;
+          top: 10px;
+          margin: 0 0 0 15%;
+          padding-left: 25px;
+          display: inline-block;
+          position: relative;
 
             p {
-                margin: 0;
                 font-size: 2rem;
-            }
-        }
+                margin: 0;
+            }}
+
 
         .red-border-q::before {
             content: "";
@@ -306,20 +294,14 @@
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        }
         font-size: 1.5rem;
+  }
+
+    p {
+        padding-top: 4px;
+        text-align: left;
     }
-}
-
-.materials-grid div:nth-of-type(2) {
-    align-self: left;
-}
-
-.materials-grid {
-    margin: 40px 0;
-    padding: 0;
-}
-////////*******End Materials Section******/////////
+  }}
 /////*Start Benefits Section**/////
 
 .benefits li {
@@ -327,7 +309,8 @@
 }
 
 .first-benefits-section {
-    width: 90%;
+    width: 100%;
+    min-width:80%;
     height: 100%;
     @include flex(center,space-between);
     flex-direction: column;
@@ -351,18 +334,20 @@
 .benefits-content {
     width: 100%;
     @include desktop {
-        .red-border-q {
-            width: 75%;
-            top: 10px;
-            margin: 0 0 0 10%;
-            padding-left: 25px;
-            display: inline-block;
-            position: relative;
+      .red-border-q {
+          width: 70%;
+          min-width:85%;
+          top: 10px;
+          margin: 0 0 0 15%;
+          padding-left: 25px;
+          display: inline-block;
+          position: relative;
 
             p {
                 font-size: 2rem;
-            }
-        }
+                margin: 0;
+            }}
+
 
         .red-border-q::before {
             content: "";
@@ -372,10 +357,14 @@
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        }
-    }
-}
+        font-size: 1.5rem;
+  }
 
+    p {
+        padding-top: 4px;
+        text-align: left;
+    }
+  }}
 .benefits-title {
     p {
         padding-top: 4px;
@@ -400,12 +389,28 @@
 
 .montessori-archive {
 
-
     h3 {
         width: 600px;
         border-top: solid 3px $color_btn_green;
         padding-top: 12px;
     }
+}
+///rotate the arrow and toggle the contents
+.rotate {
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+}
+.toggle{
+  color:green;
+  padding-left:10px;
+}
+
+.fa-angle-down{
+
+  color:green;
+  padding-left:10px;
 }
 /*Start Resources Section  */
 .main-resources {
