--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -3,9 +3,6 @@
 --------------------------------------------------------------*/
 /////*Start History Section**/////
 
-
-
-
 .history-title {
     margin-bottom: 0;
     flex: 0 90%;
@@ -21,73 +18,95 @@
     }
     @include flex(flex-end,space-between);
 
-    .history-img {
-        align-self: flex-start;
-        margin-top: 100px;
-        width: 220px;
-        height: 240px;
-        @include desktop {
-            width: 430px;
-            height: 500px;
-            padding-bottom: 40px;
-        };
+    .history-img1 {
+        display: block;
 
         img {
-            width: 100%;
-            height: 100%;
+            float: left;
         }
-    }}
-    .history-content {
-    width: 100%;
-    flex-wrap: wrap;
-    margin-left: 30px;
-.red-border-q {
-  min-width: 100%;
+        @include desktop {
+            display: none;
+        };
+    }
+
+    .history-img {
+        display: none;
+        @include desktop {
+            display: block;
+            margin-top: 100px;
+            align-self: flex-end;
+            width: 430px;
+            height: 500px;
+            padding-bottom: 100px;;
+        }
+    }
 }
+
+.history-content {
+    blockquote {
+
+        text-align: left;
+    }
+
+    p {
+        width: 100%;
+        text-align: left;
+        display: inline;
+        overflow: hidden;
+    }
+    width: 100%;
+
+
+
+    blockquote {
+      width: 100%
+    }
     @include desktop {
-      .red-border-q {
-          width: 70%;
-          min-width:85%;
-          top: 10px;
-          margin: 0 0 0 15%;
-          padding-left: 25px;
-          display: inline-block;
-          position: relative;
+        blockquote {
+            width: 75%;
+            min-width: 70%;
+            top: 10px;
+            margin: 0 0 0 15%;
+            padding-left: 25px;
+            position: relative;
 
             p {
+              margin: 0px;
                 font-size: 2rem;
-                margin: 0;
-            }}
+            }
+        }
 
-
-        .red-border-q::before {
+        blockquote::before {
             content: "";
-            display: block;
+            display: inline-block;
             position: absolute;
             top: 5PX;
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        font-size: 1.5rem;
-  }
+            font-size: 1.5rem;
+        }
 
-    p {
-        padding-top: 4px;
-        text-align: left;
+        p {
+          display: inline-block;
+            text-align: left;
+        }
     }
-  }}
+}
 ////************philosophy Section ************/////
 
 .main-philosophy {
     margin: 100px auto;
-    width: 70%;
+    width: 400px;
+    min-width: 90%;
     height: auto;
     @include flex(center,space-around);
     flex-wrap: wrap;
     position: relative;
     @include desktop {
+      width: 1000px;
+      min-width: 950px;
         height: 640px;
-
     }
 
     div {
@@ -95,7 +114,6 @@
     }
 
     .philosophy-grid {
-
         flex: 0 0 auto;
         width: 200px;
         height: 200px;
@@ -125,15 +143,11 @@
         }
 
         .philosophy-img {
-
             z-index: 2;
             height: auto;
             text-align: center;
-            overflow: hidden;
             padding: 20px;
-
             @include desktop {
-
                  @include visibility(hidden);
             }
             position: relative;
@@ -157,19 +171,20 @@
         }
 
         h2 {
-          z-index: 1;
-      margin: 0;
-      text-align: center;
-      display: inline-block;
-      width: 85.1%;
-      color: #248e6a;
-      height: auto;
-      overflow: hidden;
-      padding: 0;
-      bottom: 14px;
-      line-height: 0.9rem;
-      right: 10px;
-      position: absolute;
+            z-index: 1;
+            margin: 0;
+            text-align: center;
+            display: inline-block;
+            width: 85.1%;
+            color: #248e6a;
+            height: auto;
+            overflow: hidden;
+            padding: 0;
+            bottom: 14px;
+            line-height: 0.9rem;
+            right: 10px;
+            position: absolute;
+
             a {
                 color: #248E6A;
                 font-size: 1.1rem;
@@ -222,8 +237,6 @@
         }
     }
 }
-
-
 ////************End philosophy Section ************/////
 ////////*******Start Materials Section******/////////
 
@@ -267,26 +280,33 @@
 }
 
 .materials-contents {
-    width:90%;
+    blockquote {
+
+
+    p {
+        display: inline;
+    }}
+    width: 90%;
     @include desktop {
-      width:60%;
-      min-width: 50%;
-      .red-border-q {
-          width: 70%;
-          min-width:85%;
-          top: 10px;
-          margin: 0 0 0 15%;
-          padding-left: 25px;
-          display: inline-block;
-          position: relative;
+        width: 65%;
+        min-width: 50%;
+
+        blockquote {
+            width: 75%;
+            min-width: 70%;
+            top: 10px;
+            margin: 0 0 0 15%;
+            padding-left: 25px;
+            display: inline-block;
+            position: relative;
 
             p {
+                margin: 0px;
                 font-size: 2rem;
-                margin: 0;
-            }}
+            }
+        }
 
-
-        .red-border-q::before {
+        blockquote::before {
             content: "";
             display: block;
             position: absolute;
@@ -294,14 +314,15 @@
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        font-size: 1.5rem;
-  }
+            font-size: 1.5rem;
+        }
 
-    p {
-        padding-top: 4px;
-        text-align: left;
+        p {
+            padding-top: 4px;
+            text-align: left;
+        }
     }
-  }}
+}
 /////*Start Benefits Section**/////
 
 .benefits li {
@@ -310,7 +331,7 @@
 
 .first-benefits-section {
     width: 100%;
-    min-width:80%;
+    min-width: 80%;
     height: 100%;
     @include flex(center,space-between);
     flex-direction: column;
@@ -334,22 +355,21 @@
 .benefits-content {
     width: 100%;
     @include desktop {
-      .red-border-q {
-          width: 70%;
-          min-width:85%;
-          top: 10px;
-          margin: 0 0 0 15%;
-          padding-left: 25px;
-          display: inline-block;
-          position: relative;
+        blockquote {
+            width: 70%;
+            top: 10px;
+            margin: 0 0 0 15%;
+            padding-left: 25px;
+            display: inline-block;
+            position: relative;
 
             p {
+                margin: 0px;
                 font-size: 2rem;
-                margin: 0;
-            }}
+            }
+        }
 
-
-        .red-border-q::before {
+        blockquote::before {
             content: "";
             display: block;
             position: absolute;
@@ -357,14 +377,16 @@
             left: 0PX;
             height: 100%;
             border-left: solid 12px $border_left_red;
-        font-size: 1.5rem;
-  }
+            font-size: 1.5rem;
+        }
 
-    p {
-        padding-top: 4px;
-        text-align: left;
+        p {
+            padding-top: 4px;
+            text-align: left;
+        }
     }
-  }}
+}
+
 .benefits-title {
     p {
         padding-top: 4px;
@@ -375,20 +397,21 @@
     }
 }
 ///Archive ////
-.the-archive ul{
-  width: 500px;
-  line-height: 2.5rem;
-  font-size: 1.6rem;
-  font-family: $font_title;
-  li{
-    padding-left: 30px;
-    line-height: inherit;
-    font-size: 1.4rem;
-  }
+
+.the-archive ul {
+    width: 500px;
+    line-height: 2.5rem;
+    font-size: 1.6rem;
+    font-family: $font_title;
+
+    li {
+        padding-left: 30px;
+        line-height: inherit;
+        font-size: 1.4rem;
+    }
 }
 
 .montessori-archive {
-
     h3 {
         width: 600px;
         border-top: solid 3px $color_btn_green;
@@ -396,45 +419,46 @@
     }
 }
 ///rotate the arrow and toggle the contents
+
 .rotate {
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
 }
-.toggle{
-  color:green;
-  padding-left:10px;
+
+.toggle {
+    color: green;
+    padding-left: 10px;
 }
 
-.fa-angle-down{
-
-  color:green;
-  padding-left:10px;
+.fa-angle-down {
+    color: green;
+    padding-left: 10px;
 }
 /*Start Resources Section  */
 .main-resources {
-  border-bottom: none;
-  height: 400px;
-  position: relative;
-.green-btn {
-    background-color: #4fc8a1;
-    @include border-radius (6px);
-    font-family: Noto Sans;
-    font-size: 14px;
-    font-weight: 700;
-    text-align: center;
-    line-height: 28px;
-    color: #fff;
-    padding: 10px 20px;
-    text-shadow: none;
-    letter-spacing: 0.8px;
-    display: block;
-    margin: 10px auto;
-    @include desktop {
-        width: 331px;
-        height: 65px;
-        font-size: 20px;
+    border-bottom: none;
+    height: 400px;
+    position: relative;
+    .green-btn {
+        background-color: #4fc8a1;
+        @include border-radius (6px);
+        font-family: Noto Sans;
+        font-size: 14px;
+        font-weight: 700;
+        text-align: center;
+        line-height: 28px;
+        color: #fff;
+        padding: 10px 20px;
+        text-shadow: none;
+        letter-spacing: 0.8px;
+        display: block;
+        margin: 10px auto;
+        @include desktop {
+            width: 331px;
+            height: 65px;
+            font-size: 20px;
+        }
     }
-}
 }
