--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -18,33 +18,6 @@
 }
 // fonts
 
-h1,
-h2,
-h3 {
-	font-family: $font_title;
-	font-weight: normal;
-}
-
-h1 {
-	font-size: 2.25rem;
-	line-height: 2.625rem;
-}
-
-h2 {
-	font-size: 1.875rem;
-	line-height: 2.125rem;
-}
-
-h3 {
-	font-size: 1.5rem;
-	line-height: 1.6875rem;
-}
-
-p {
-	font-size: 1.625rem;
-	line-height: 2.5rem;
-	font-style: $font_body;
-}
 
 .spcil p {
 	font-size: 1.25rem;
@@ -189,9 +162,9 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			@include tablet {
-				flex: 0.03;
-			}
+			// @include tablet {
+			// 	flex: 0.03;
+			// }
 			@include desktop {
 				flex: 1;
 			}
