--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -5,11 +5,11 @@ $basic_pading: 0.625rem; /// ==>10px ////
 $basic_margin: 0.625rem; /// ==>10px ////
 $basic_hline_height: 0.625rem; /// ==>10px ////
 ///Screen Size///
-$desktop_width:70rem; //960px
-$Tablet_width:37.5rem; //
+$desktop_width:768px; //768px
+// $Tablet_width:40rem; //
 $mobile_width:37.5rem; //480px for Mobile Container
 //Layout//
-$mobile_line_height:2rem;
+$mobile_line_height:1.5rem;
 $base_spacing_normal: 1rem;
 $base_spacing_large: 2.5rem;
 $base_spacing_large: 4rem;
@@ -39,38 +39,23 @@ $white: #fff;
 
 
 // Typography ///
-
-$font_title: 'Asap';
-$font_header_footer: 'PT Sans';
-$font_body: 'Noto Sans';
-$font_main: 'Noto Sans';
+$font_title: 'Asap',sans-serif;
+$font_header_footer: 'PT Sans',sans-serif;
+$font_body: 'Noto Sans',sans-serif;
+$font_main: 'Noto Sans',sans-serif;
 ///Font Sizing ///
 // mobile sizes ///
-$h1_size_mob: 2.5rem;
-$h2_size_mob: 2rem;
-$h3_size_mob: 1.3rem;
-$font_body_size_mob: 1.6rem;
-
-
-/// desktop sizes ////
-$h1_size_desktop: 3rem;
-$h2_size_desktop: 2.2rem;
-$h3_size_desktop: 1.7rem;
-$font_body_size_desktop: 1.7rem;
-
-///Font Sizing ///
-// mobile sizes ///
-$h1_size_mob: 2.25rem;
+$h1_size_mob: 2rem;
 $h2_size_mob: 1.6rem;
 $h3_size_mob: 1.2rem;
 $font_school_info: 1.5rem;
-$font_body_size_mob: 1.6rem;
+$font_body_size_mob: 1.5rem;
 $font_member_staff:1.375rem;
 
 
 /// desktop sizes ////
-$h1_size_desktop: 2.8rem;
+$h1_size_desktop: 3rem;
 $h2_size_desktop: 2rem;
 $h3_size_desktop: 1.5rem;
-$font_body_size_desktop: 2.1rem;
-$font_line-height-body: 1.5;
+$font_body_size_desktop: 1.7rem;
+$font_line-height-body: 1.8;
